--- a/landing.html
+++ b/landing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -68,6 +68,120 @@
             logout();
           });
       });
+    </script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LinguaViva - Página Inicial</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>LinguaViva</h1>
+      <nav>
+        <a href="landing.html">Início</a>
+        <a href="cadastro-aluno.html">Alunos</a>
+        <a href="cadastro-professor.html">Professores</a>
+        <a href="cadastro-curso.html">Cursos</a>
+        <a href="matricula.html">Matrículas</a>
+        <a href="turmas.html">Turmas</a>
+        <a href="#" id="logoutBtn">Sair</a>
+      </nav>
+    </header>
+
+    <main>
+      <h2>Bem-vindo ao Sistema de Gestão</h2>
+      <p>Selecione uma das opções no menu acima para começar.</p>
+
+      <div class="stats">
+        <div class="stat-card">
+          <h3>Alunos</h3>
+          <p id="totalAlunos">0</p>
+        </div>
+
+        <div class="stat-card">
+          <h3>Professores</h3>
+          <p id="totalProfessores">0</p>
+        </div>
+
+        <div class="stat-card">
+          <h3>Cursos</h3>
+          <p id="totalCursos">0</p>
+        </div>
+
+        <div class="stat-card">
+          <h3>Matrículas</h3>
+          <p id="totalMatriculas">0</p>
+        </div>
+      </div>
+
+      <!-- Botão para limpar dados -->
+      <div style="margin-top: 30px; text-align: center">
+        <button
+          onclick="limparDados()"
+          style="
+            padding: 10px 20px;
+            background-color: #b3000d;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+          "
+        >
+          ⚠️ Limpar Todos os Dados
+        </button>
+      </div>
+    </main>
+
+    <script src="js/classes.js"></script>
+    <script src="js/auth.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // Recuperar os dados do localStorage
+        const dadosSalvos = localStorage.getItem("escolaData");
+        const escola = dadosSalvos
+          ? JSON.parse(dadosSalvos)
+          : {
+              alunos: [],
+              professores: [],
+              cursos: [],
+              matriculas: [],
+            };
+
+        // Atualizar estatísticas
+        document.getElementById("totalAlunos").textContent =
+          escola.alunos.length;
+        document.getElementById("totalProfessores").textContent =
+          escola.professores.length;
+        document.getElementById("totalCursos").textContent =
+          escola.cursos.length;
+        document.getElementById("totalMatriculas").textContent =
+          escola.matriculas.length;
+
+        // Logout
+        document
+          .getElementById("logoutBtn")
+          .addEventListener("click", function () {
+            logout();
+          });
+      });
+
+      function limparDados() {
+        if (
+          confirm(
+            "Tem certeza que deseja APAGAR TODOS os dados salvos no sistema?\nEssa ação não pode ser desfeita."
+          )
+        ) {
+          localStorage.clear();
+          alert("Todos os dados foram apagados com sucesso!");
+          location.reload();
+        }
+      }
     </script>
   </body>
 </html>
