--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button type="submit">Entrar</button>
       </form>
 
-      <p class="login-info">Use: 123 / 123</p>
+      <p class="login-info">Use: admin / admin123</p>
     </div>
 
     <script src="js/auth.js"></script>
